fix(Icon): do not prevent color prop from being passed to an SVG icon

--- a/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
@@ -111,18 +111,18 @@ class Example extends lng.Component {
 
 ### Style Properties
 
-| name            | type             | description                                                          |
-| --------------- | ---------------- | -------------------------------------------------------------------- |
-| backgroundColor | string           | color of the background                                              |
-| contentSpacing  | number           | padding to add between the icon and the text                         |
-| iconColor       | string           | color to be applied to the icon (only works with pure white PNGs)    |
-| offsetY         | number           | offset used to vertically center the text within the container       |
-| paddingX        | number           | padding to add on the left and right between the text and background |
-| paddingY        | number           | padding to add on the top and bottom between the text and background |
-| radius          | number \| array  | radius of badge corner                                               |
-| strokeColor     | string           | color of the Badge border                                            |
-| strokeWidth     | number           | width of the Badge border                                            |
-| textStyle       | string \| object | text style to apply to the title                                     |
+| name            | type             | description                                                              |
+| --------------- | ---------------- | ------------------------------------------------------------------------ |
+| backgroundColor | string           | color of the background                                                  |
+| contentSpacing  | number           | padding to add between the icon and the text                             |
+| iconColor       | string           | color to be applied to the icon (only works with pure white base images) |
+| offsetY         | number           | offset used to vertically center the text within the container           |
+| paddingX        | number           | padding to add on the left and right between the text and background     |
+| paddingY        | number           | padding to add on the top and bottom between the text and background     |
+| radius          | number \| array  | radius of badge corner                                                   |
+| strokeColor     | string           | color of the Badge border                                                |
+| strokeWidth     | number           | width of the Badge border                                                |
+| textStyle       | string \| object | text style to apply to the title                                         |
 
 ### Events
 
