fix(Keyboard): updates a header to proper level

--- a/packages/@lightningjs/ui-components/src/components/Keyboard/Keyboard.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Keyboard/Keyboard.mdx
@@ -131,6 +131,6 @@ Fired when a key is Entered
 
 Fired when keyboard is focused or unfocused. Can be listened to by an input to know if the input should be listening for softkey events
 
-### `$toggleKeyboard: { key:string }`
+#### `$toggleKeyboard: { key:string }`
 
 Fired when defaultFormat is toggled between Dialpad and Dialpad extended
