--- a/packages/@lightningjs/ui-components/src/components/TextBox/TextBox.mdx
+++ b/packages/@lightningjs/ui-components/src/components/TextBox/TextBox.mdx
@@ -1,5 +1,7 @@
 ﻿{/* prettier-ignore */}
-{/*Copyright 2023 Comcast Cable Communications Management, LLC
+{/*
+Copyright 2023 Comcast Cable Communications Management, LLC
+
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
@@ -11,7 +13,9 @@ distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-SPDX-License-Identifier: Apache-2.0\*/}
+
+SPDX-License-Identifier: Apache-2.0
+\*/}
 
 import { Meta, Title } from '@storybook/blocks';
 import * as TextBoxStories from './TextBox.stories';
