fix(ToolTip): fix DocsLink import issue

--- a/packages/@lightningjs/ui-components/src/components/Tooltip/Tooltip.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Tooltip/Tooltip.mdx
@@ -19,6 +19,7 @@ SPDX-License-Identifier: Apache-2.0
 
 import { Meta, Title } from '@storybook/blocks';
 import * as TooltipStories from './Tooltip.stories';
+import { DocsLink } from '../../docs/utils';
 
 <Meta of={TooltipStories} />
 
