fix(Storybook): fixes mdx lint issue for docs

--- a/packages/@lightningjs/ui-components/src/docs/Storybook.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Storybook.mdx
@@ -105,7 +105,7 @@ That signal gets mapped to a new method local to our story that then calls the `
 
 ```js
 onChange(value) {
-  updateArgs({ value });
+  updateArgs({ value })
 }
 ```
 
