--- a/packages/@lightningjs/ui-components/src/docs/ThemingComponentConfig.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingComponentConfig.mdx
@@ -31,11 +31,12 @@ The `style` object can be used to override the predetermined style properties of
 
 For example:
 
+{/* prettier-ignore */}
 ```js
 componentConfig: {
   ProgressBar: {
     style: {
-      radius: 20;
+      radius: 20
     }
   }
 }
@@ -55,10 +56,11 @@ When specified, these strings will override the default tone used by the compone
 
 For example:
 
+{/* prettier-ignore */}
 ```js
 componentConfig: {
   ProgressBar: {
-    tone: 'brand';
+    tone: 'brand'
   }
 }
 ```
@@ -78,10 +80,11 @@ The `mode` property expects a string which will determine the default interactio
 
 For example:
 
+{/* prettier-ignore */}
 ```js
 componentConfig: {
   ProgressBar: {
-    mode: 'disabled';
+    mode: 'disabled'
   }
 }
 ```
