--- a/packages/@lightningjs/ui-components/src/docs/ThemingTone.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingTone.mdx
@@ -36,10 +36,11 @@ You may change the default tone across all LUI components by setting this value 
 
 For example, if you want to use a brand tone on all `ProgressBar` components, add ProgressBar's tone to `componentConfig`:
 
+{/* prettier-ignore */}
 ```js
 componentConfig: {
   ProgressBar: {
-    tone: 'brand';
+    tone: 'brand'
   }
 }
 ```
