--- a/packages/@lightningjs/ui-components/src/components/Tile/Tile.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Tile/Tile.mdx
@@ -96,6 +96,7 @@ class Basic extends lng.Component {
 | badge              | object  | false    | undefined  | Object containing all properties supported in the [Badge component](?path=/docs/components-badge--text)                                                                                                                                 |
 | checkbox           | object  | false    | undefined  | Object containing all properties supported in the [Checkbox component](?path=/docs/components-checkbox--checkbox)                                                                                                                       |
 | label              | object  | false    | undefined  | Object containing all properties supported in the [Label component](?path=/docs/components-label--label)                                                                                                                                |
+| iconSrc            | string  | false    | undefined  | Source of icon                                                                                                                                                                                                                          |
 | metadata           | object  | false    | undefined  | Object containing all properties supported in the [MetadataTile component](?path=/docs/components-metadatatile--metadata-tile)<br /> Can use a different Metadata component by passing in a 'type' and then that component's properties |
 | metadataLocation   | string  | false    | 'standard' | Controls where there metadata is displayed in relation to the Tile. Available values are 'standard' and 'inset'                                                                                                                         |
 | persistentMetadata | boolean | false    | false      | Metadata will be shown at all times if set to true, otherwise it will only show when the Tile has focus                                                                                                                                 |
@@ -107,6 +108,11 @@ class Basic extends lng.Component {
 | ---------------------- | --------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | animationEntrance      | object                | Animation values applied on entrance                                                                                                                                                                                  |
 | animationExit          | object                | Animation values applied on exit                                                                                                                                                                                      |
+| iconHeight             | number                | customized height of icon                                                                                                                                                                                             |
+| iconWidth              | number                | customized width of icon                                                                                                                                                                                              |
+| iconX                  | number                | horizontal position of icon within the tile                                                                                                                                                                           |
+| iconYInset             | number                | vertical icon position within the tile when metadataLocation is inset                                                                                                                                                 |
+| iconYStandard          | number                | vertical icon position within the tile when metadataLocation is standard                                                                                                                                              |
 | metadataLocation       | 'standard' \| 'inset' | Determines the location of the metadata within the tile                                                                                                                                                               |
 | paddingX               | number                | Padding applied to the inside of the left and right of component                                                                                                                                                      |
 | paddingY               | number                | Padding applied to the inside of the top and bottom of component (when metadataLocation is inset, if there is no ProgressBar, this is applied to the space between the bottom of the Metadata and bottom of the Tile) |
