fix(TitleRow): default autoResizeHeight to prevent infinite loop

--- a/packages/@lightningjs/ui-components/src/components/TitleRow/TitleRow.mdx
+++ b/packages/@lightningjs/ui-components/src/components/TitleRow/TitleRow.mdx
@@ -65,9 +65,10 @@ It allows setting all
 [properties, style properties, and child properties](/docs/components-row--basic#properties)
 supported by `Row`.
 
-| name  | type   | required | default   | description                                          |
-| ----- | ------ | -------- | --------- | ---------------------------------------------------- |
-| title | string | false    | undefined | The title text to be displayed above the `Row` items |
+| name             | type    | required | default   | description                                                                                           |
+| ---------------- | ------- | -------- | --------- | ----------------------------------------------------------------------------------------------------- |
+| autoResizeHeight | boolean | false    | true      | If true, the height of the TitleRow will be set to the height of the title, vertical padding, and row |
+| title            | string  | false    | undefined | The title text to be displayed above the `Row` items                                                  |
 
 ## Methods
 
