--- a/packages/@lightningjs/ui-components/src/components/Tile/Tile.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Tile/Tile.mdx
@@ -80,7 +80,7 @@ class Basic extends lng.Component {
         metadata: {
           type: MetadataCard
           title: 'Title',
-          subtitle: 'Subtitle'
+          details: 'Details'
         }
       }
     };
