--- a/packages/@lightningjs/ui-components/src/components/MetadataBase/MetadataBase.mdx
+++ b/packages/@lightningjs/ui-components/src/components/MetadataBase/MetadataBase.mdx
@@ -44,7 +44,7 @@ class Example extends lng.Component {
         w: 400,
         h: 300,
         title: 'Title',
-        subtitle: [
+        details: [
           '94%',
           {
             icon: lightningbolt,
@@ -78,12 +78,12 @@ class Example extends lng.Component {
 | name         | type           | required             | default   | description                                  |
 | ------------ | -------------- | -------------------- | --------- | -------------------------------------------- |
 | description  | string         | false                | undefined | third line or description of the content     |
+| details      | inline content | false                | undefined | relevant content data in the middle          |
 | logo         | string         | false                | undefined | logo to display at bottom of component       |
 | logoHeight   | number         | true (if using logo) | undefined | height of logo                               |
 | logoPosition | string         | false                | 'right'   | which side to place logo (`right` or `left`) |
 | logoTitle    | string         | true (if using logo) | undefined | title of logo to use for announcer           |
 | logoWidth    | number         | true (if using logo) | undefined | width of logo                                |
-| subtitle     | inline content | false                | undefined | relevant content data in the middle          |
 | title        | string         | false                | undefined | first line or headline of the content        |
 
 ### Style Properties
@@ -91,9 +91,9 @@ class Example extends lng.Component {
 | name                 | type             | description                                                     |
 | -------------------- | ---------------- | --------------------------------------------------------------- |
 | descriptionTextStyle | string \| object | text style for description                                      |
+| detailsTextStyle     | string \| object | text style for details                                          |
 | fadeWidth            | number           | width of fade applied to second line if text encroaches on logo |
 | logoHeight           | number           | height for logo                                                 |
 | logoPadding          | number           | spacing between logo and secondLine                             |
 | logoWidth            | number           | width for logo                                                  |
-| subtitleTextStyle    | string \| object | text style for subtitle                                         |
 | titleTextStyle       | string \| object | text style for title                                            |
