--- a/packages/@lightningjs/ui-components/src/components/ListItem/ListItem.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ListItem/ListItem.mdx
@@ -17,14 +17,21 @@ limitations under the License.
 SPDX-License-Identifier: Apache-2.0
 \*/}
 
-import { Meta, Title } from '@storybook/blocks';
+import {
+  Meta,
+  Title,
+  ArgTypes,
+  Description,
+  Subtitle
+} from '@storybook/blocks';
 import * as ListItemStories from './ListItem.stories';
+import * as ButtonStories from '../Button/Button.stories';
 
 <Meta of={ListItemStories} />
 
 <Title />
 
-Component to represent a single item within a list.
+<Subtitle>Component to represent a single item within a list.</Subtitle>
 
 ## Source
 
@@ -32,7 +39,7 @@ https://github.com/rdkcentral/Lightning-UI-Components/tree/develop/packages/%40l
 
 ## Usage
 
-'ListItem' extends 'Button', and therefore utilizes much of the same functionality and properties. It can display an 'Icon' or 'Checkbox' before the text, a title and/or description in the center of the content, and an 'Icon' or 'Checkbox' in the Suffix after the text.
+<Description of={ListItemStories} />
 
 ```js
 import { ListItem } from '@lightningjs/ui-components';
@@ -57,6 +64,8 @@ class Basic extends lng.Component {
 
 `ListItem` has the same properties as the ones listed in [Button](?path=/docs/components-button--basic) in addition to a couple listed below:
 
+<ArgTypes of={ListItemStories} />
+
 | name           | type    | default   | description                                                                           |
 | -------------- | ------- | --------- | ------------------------------------------------------------------------------------- |
 | description    | string  | undefined | description text                                                                      |
@@ -74,3 +83,9 @@ class Basic extends lng.Component {
 | paddingX             | number | padding on left and right sides of text      |
 | contentSpacing       | number | padding between title and prefix             |
 | titleTextStyle       | object | text style to apply to the title             |
+
+### Button Properties
+
+List item extends button
+
+<ArgTypes of={ButtonStories} />
