--- a/packages/@lightningjs/ui-components/src/components/ListItem/ListItem.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ListItem/ListItem.mdx
@@ -73,5 +73,5 @@ class Basic extends lng.Component {
 | descriptionTextStyle | object | text style to apply to the description       |
 | logoStyle            | object | custom styling for the logo element          |
 | paddingX             | number | padding on left and right sides of text      |
-| titlePadding         | number | padding between title and prefix             |
+| contentSpacing       | number | padding between title and prefix             |
 | titleTextStyle       | object | text style to apply to the title             |
