fix(Storybook): adds subcategory to some components for docs org

--- a/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
@@ -20,11 +20,9 @@ SPDX-License-Identifier: Apache-2.0
 import { ArgTypes, Meta, Title, Description } from '@storybook/blocks';
 import * as ButtonStories from './Button.stories.js';
 
-<Meta of={ButtonStories} />
+<Meta title="Components / Button" />
 
-<Title />
-
-<Description of={ButtonStories} />
+# Button
 
 ## Source
 
