--- a/packages/@lightningjs/ui-components/src/components/Card/Card.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Card/Card.mdx
@@ -20,9 +20,9 @@ SPDX-License-Identifier: Apache-2.0
 import { Meta, Title } from '@storybook/blocks';
 import * as CardStories from './Card.stories';
 
-<Meta of={CardStories} />
+<Meta title="Components/Card" />
 
-<Title />
+# Cards
 
 Cards are very configurable. Cards is the foundational basis for all other card variations.
 
