--- a/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
@@ -18,11 +18,10 @@ SPDX-License-Identifier: Apache-2.0
 \*/}
 
 import { Meta, Title } from '@storybook/blocks';
-import * as CardContentStories from './CardContent.stories';
 
-<Meta of={CardContentStories} />
+<Meta title="Components/CardContent" />
 
-<Title />
+# CardContent
 
 Formats a Card with one part Tile and one part Metadata.
 
