--- a/packages/@lightningjs/ui-components/src/components/Checkbox/Checkbox.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Checkbox/Checkbox.mdx
@@ -20,9 +20,9 @@ SPDX-License-Identifier: Apache-2.0
 import { Meta, Title } from '@storybook/blocks';
 import * as CheckboxStories from './Checkbox.stories';
 
-<Meta of={CheckboxStories} />
+<Meta title="Components/Checkboxes" />
 
-<Title />
+# Checkbox
 
 A checkbox component that can be toggled between a checked an unchecked
 state.
