--- a/packages/@lightningjs/ui-components/src/components/Keyboard/Keyboard.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Keyboard/Keyboard.mdx
@@ -18,11 +18,10 @@ SPDX-License-Identifier: Apache-2.0
 \*/}
 
 import { Meta, Title } from '@storybook/blocks';
-import * as KeyboardStories from './Keyboard.stories';
 
-<Meta of={KeyboardStories} />
+<Meta title="Components/Keyboard" />
 
-<Title />
+# Keyboard
 
 Pattern created out of multiple elements to represent a keyboard.
 
