--- a/packages/@lightningjs/ui-components/src/components/ListItem/ListItem.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ListItem/ListItem.mdx
@@ -27,11 +27,11 @@ import {
 import * as ListItemStories from './ListItem.stories';
 import * as ButtonStories from '../Button/Button.stories';
 
-<Meta of={ListItemStories} />
+<Meta title="Components/ListItem" />
 
-<Title />
+# ListItem
 
-<Subtitle>Component to represent a single item within a list.</Subtitle>
+Component to represent a single item within a list.
 
 ## Source
 
@@ -39,7 +39,8 @@ https://github.com/rdkcentral/Lightning-UI-Components/tree/develop/packages/%40l
 
 ## Usage
 
-<Description of={ListItemStories} />
+`ListItem` extends `Button`, and therefore utilizes much of the same functionality and
+properties. It can display an `Icon` or `Checkbox` before the text, a title and/or description in the center of the content, and an `Icon` or `Checkbox` in the Suffix after the text.
 
 ```js
 import { ListItem } from '@lightningjs/ui-components';
