--- a/packages/@lightningjs/ui-components/src/components/Radio/Radio.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Radio/Radio.mdx
@@ -20,9 +20,9 @@ SPDX-License-Identifier: Apache-2.0
 import { Meta, Title } from '@storybook/blocks';
 import * as RadioStories from './Radio.stories';
 
-<Meta of={RadioStories} />
+<Meta title="Components/Radio" />
 
-<Title />
+# Radio
 
 A radio has 2 states: "on" or "off". When used in a group, it should let a user select only one of the choices at a time. This can be managed with the withSelections mixin
 
