--- a/packages/@lightningjs/ui-components/src/components/Slider/Slider.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Slider/Slider.mdx
@@ -20,9 +20,9 @@ SPDX-License-Identifier: Apache-2.0
 import { Meta, Title } from '@storybook/blocks';
 import * as SliderStories from './Slider.stories';
 
-<Meta of={SliderStories} />
+<Meta title="Components/Slider" />
 
-<Title />
+# Slider
 
 Progress control component, similar to the DOM's [input[type="range"]](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/range)
 
