--- a/packages/@lightningjs/ui-components/src/components/Toggle/Toggle.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Toggle/Toggle.mdx
@@ -20,9 +20,9 @@ SPDX-License-Identifier: Apache-2.0
 import { Meta, Title } from '@storybook/blocks';
 import * as ToggleStories from './Toggle.stories';
 
-<Meta of={ToggleStories} />
+<Meta title="Components/Toggle" />
 
-<Title />
+# Toggle
 
 A checkbox component with toggle slider behavior
 
