--- a/packages/@lightningjs/ui-components/src/components/Control/Control.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Control/Control.mdx
@@ -19,9 +19,8 @@ SPDX-License-Identifier: Apache-2.0
 
 import { Meta } from '@storybook/blocks';
 import Control from '.';
-import * as ControlStories from './Control.stories';
 
-<Meta of={ControlStories} />
+<Meta title="Components/Control" />
 
 # Control
 
