--- a/packages/@lightningjs/ui-components/src/docs/Base.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Base.mdx
@@ -71,7 +71,7 @@ class MyComponent extends withMixins(Base) {}
 
 ### Methods
 
-#### static get componentName(): string
+#### static get \_\_componentName(): string
 
 Any component which extends the Base component and uses the `withThemeStyles` mixin requires this static accessor, which returns the name of the component. This name is used by the theme file in order to map component overrides and extensions.
 
