--- a/packages/@lightningjs/ui-components/src/components/Artwork/Artwork.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Artwork/Artwork.mdx
@@ -17,7 +17,7 @@ limitations under the License.
 SPDX-License-Identifier: Apache-2.0
 \*/}
 
-import { ArgTypes, Meta, Title } from '@storybook/blocks';
+import { Meta, Title } from '@storybook/blocks';
 import * as ArtworkStories from './Artwork.stories.js';
 
 <Meta of={ArtworkStories} />
